# open3d_test

./: CMakeLists.txt  README.md  camera_pose_trajectory.cpp
open3d_0.9.0_test/: CMakeLists.txt  camera_pose_trajectory.cpp
